force-app/main/default/objects/custom_create313__c/custom_create313__c.object-meta.xml
<CustomObject>
    <label>Custom created object313</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects313</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>