force-app/main/default/objects/custom_create313__c/fields/custom_create_313field532__c.field-meta.xml
<CustomField>
    <fullName>custom_create_313field532__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 313field532</label>
    <type>Checkbox</type>
</CustomField>